# kos-factory

./: LICENSE  README.md  UWAGA.docx  pyproject.toml  struktura.txt  ~$UWAGA.docx
docs/: VISION.md
factory/: cli.py
