[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "kos-factory"
version = "0.1.0"
description = "Engineering platform for building and managing software projects."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "MarcusDD720" }
]

dependencies = []

[project.scripts]
factory = "factory.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.13"
strict = true

[tool.setuptools]
packages = ["factory"]